--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -3,14 +3,16 @@ html {
   font-size: 100%;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: hsl(0, 0%, 2%);
-  color: hsl(0, 0%, 100%);
+  background-color: var(--background-color);
+  color: var(--text-color);
   margin: 0;
   padding: 0;
 }
