--- a/app/scss/globals/_boilerplate.scss
+++ b/app/scss/globals/_boilerplate.scss
@@ -1,3 +1,5 @@
+@use '../util' as u;
+
 html {
   box-sizing: border-box;
   font-size: 100%;
@@ -10,7 +12,7 @@ html {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: u.$font;
   background-color: var(--background-color);
   color: var(--text-color);
   margin: 0;
