--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -1,7 +1,33 @@
+@use "../util" as u;
+
 .grid {
-  &__main {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto;
+  gap: 40px;
+  //max-width: 1000px;
+  width: min(100% - 40px, 1000px);
+  margin-inline: auto;
+
+  @include u.breakpoint(large) {
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto;
   }
 
-  &__siderbar {
+  &__main,
+  &__sidebar {
+    padding: 40px;
+  }
+
+  &__main {
+    background-color: hsl(240, 99%, 33%);
+  }
+
+  &__sidebar {
+    background-color: hsl(300, 100%, 30%);
+
+    @include u.breakpoint-down(medium) {
+      text-align: center;
+    }
   }
 }
