--- a/app/scss/globals/_typography.scss
+++ b/app/scss/globals/_typography.scss
@@ -1,4 +1,6 @@
-h1, 
+@use "../util" as u;
+
+h1,
 h2,
 h3 {
   font-weight: 700;
@@ -6,8 +8,19 @@ h3 {
   margin-top: 0;
 }
 
+h1 {
+  //font-size: clamp(28px, 16px + 2vw, 40px);
+  font-size: clamp(1.75rem, 1rem + 2vw, 2.5rem);
+}
+
+h2 {
+  // font-size: clamp(22px, 14px + 1.5vw, 36px);
+  font-size: clamp(1.375rem, 0.875rem + 1.5vw, 2.25rem);
+}
+
 p {
   margin-top: 0;
+  font-size: 1rem;
 }
 
 a,
