--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -21,6 +21,14 @@
 
   &__main {
     background-color: hsl(240, 99%, 33%);
+
+    @include u.breakpoint(medium) {
+      background-color: hsl(120, 100%, 16%);
+    }
+
+    @include u.breakpoint(large) {
+      background-color: hsl(39, 100%, 35%);
+    }
   }
 
   &__sidebar {
@@ -28,6 +36,10 @@
 
     @include u.breakpoint-down(medium) {
       text-align: center;
+    }
+
+    @include u.breakpoint-down(small) {
+      text-align: right;
     }
   }
 }
