--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -4,9 +4,9 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
-  gap: 40px;
+  gap: u.rem(40);
   //max-width: 1000px;
-  width: min(100% - 40px, 1000px);
+  width: min(100% - u.rem(40), u.rem(100));
   margin-inline: auto;
 
   @include u.breakpoint(large) {
@@ -16,7 +16,7 @@
 
   &__main,
   &__sidebar {
-    padding: 40px;
+    padding: u.rem(40);
   }
 
   &__main {
