--- a/app/scss/layout/_grid.scss
+++ b/app/scss/layout/_grid.scss
@@ -1,12 +1,16 @@
 @use "../util" as u;
 
+%widget {
+  padding: u.rem(16);
+}
+
 .grid {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
   gap: u.rem(40);
   //max-width: 1000px;
-  width: min(100% - u.rem(40), u.rem(100));
+  width: min(100% - u.rem(40), u.rem(1000));
   margin-inline: auto;
 
   @include u.breakpoint(large) {
@@ -32,14 +36,25 @@
   }
 
   &__sidebar {
-    background-color: hsl(300, 100%, 30%);
-
     @include u.breakpoint-down(medium) {
       text-align: center;
     }
 
     @include u.breakpoint-down(small) {
       text-align: right;
+    }
+  }
+
+  &__widget {
+    &--magenta {
+      @extend %widget;
+      background-color: hsl(300, 100%, 30%);
+    }
+
+    &--green {
+      // @extend .grid__widget;
+      @extend %widget;
+      background-color: hsl(120, 100%, 27%);
     }
   }
 }
